# tenvplate

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yaml  merge.yaml  pr.yaml  publish.yaml
src/: main.py  resources.py
src/plugins/: cli_azure_keyvault.py  cli_k8s.py
src/sources/: azure_keyvault.py  k8s.py  protocols.py
src/tenvplate/: cli.py  processing.py  progress.py  protocols.py  resources.py
tests/: conftest.py  test_azure_keyvault.py  test_k8s.py  test_main.py
tests/data/: .sample.env.template  sample_plugin.py
tests/plugins/: test_cli_azure_keyvault.py  test_cli_k8s.py
tests/tenvplate/: test_cli.py  test_processing.py  test_resource_manager.py
